--- a/Project.toml
+++ b/Project.toml
@@ -38,7 +38,7 @@ ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.9"
 Dierckx = "0.5"
-DiffEqCallbacks = "2.22"
+DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
@@ -46,9 +46,9 @@ Insolation = "0.3"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 LambertW = "0.4"
-OrdinaryDiffEq = "5.64.0"
+OrdinaryDiffEq = "5, 6"
 RRTMGP = "0.6"
-StaticArrays = "1.4"
+StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.4"
 Thermodynamics = "0.10"
