--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -7,4 +7,4 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [compat]
-DiffEqBase = "~6.84.0"
+DiffEqBase = "5, 6"
