--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -73,8 +73,8 @@ ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.9"
 Dierckx = "0.5"
-DiffEqBase = "~6.84.0"
-DiffEqCallbacks = "2.22"
+DiffEqBase = "5, 6"
+DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
@@ -88,7 +88,7 @@ LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 NCRegressionTests = "0.2"
 OrderedCollections = "1.4"
-OrdinaryDiffEq = "5.64.0"
+OrdinaryDiffEq = "5, 6"
 Plots = "1.27"
 PoissonRandom = "0.4"
 PrettyTables = "1.3, 2"
@@ -97,8 +97,8 @@ QuadGK = "2.4"
 RRTMGP = "0.6"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
-SciMLBase = "~1.38.3"
-StaticArrays = "1.4"
+SciMLBase = "1"
+StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.4"
 TerminalLoggers = "0.1"
