--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -73,7 +73,7 @@ CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
 ClimaCore = "0.10"
 CloudMicrophysics = "0.9"
 Dierckx = "0.5"
-DiffEqBase = "~6.84.0"
+DiffEqBase = "5, 6"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4"
@@ -82,13 +82,13 @@ JSON = "0.21"
 LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 OrderedCollections = "1.4"
-OrdinaryDiffEq = "5.64.0"
+OrdinaryDiffEq = "5, 6"
 PoissonRandom = "0.4"
 PrettyTables = "1.3, 2"
 RRTMGP = "0.6"
 RootSolvers = "0.2, 0.3"
-SciMLBase = "~1.38.3"
-StaticArrays = "1.4"
+SciMLBase = "1"
+StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.4"
 TerminalLoggers = "0.1"
