--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -364,6 +364,12 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":balloon: Single column EDMF Soares"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case Soares --split_ode false --ode_algo ODE.Euler --dt_save_to_sol 5mins --z_elem 75 --z_stretch false --z_max 3750 --job_id edmf_soares --dt 1secs --t_end 8hours --regression_test true --anelastic_dycore true --apply_limiter false --debugging_tc true --dt_save_to_disk 5mins"
+        artifact_paths: "edmf_soares/*"
+        agents:
+          slurm_mem: 20GB
+
       - label: ":dart: EDMF Consistency test Bomex"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex --turbconv edmf --turbconv_case Bomex --split_ode false --ode_algo ODE.Euler --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --job_id edmf_bomex_consistency --dt 6secs --t_end 6hours --anelastic_dycore true --apply_limiter false --test_edmf_consistency true --debugging_tc true --dt_save_to_disk 5mins"
         artifact_paths: "edmf_bomex_consistency/*"
